[package]
name = "alex-solana-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "alex_solana_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
solana-program = "1.9.9"
uint = "=0.9.1"
spl-token = { version = "3.3.0", features = ["no-entrypoint"] }

